config rubocop for client

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -22,6 +22,8 @@ AllCops:
     - 'Rakefile'
     - 'config.ru'
     - 'app/assets/stylesheets/**'
+    - 'client/**/*'
+
   TargetRubyVersion: 2.5
 # Indent private/protected/public as deep as method definitions
 Layout/AccessModifierIndentation:
